# functor_derive

./: Cargo.toml  README.md
functor_derive/: Cargo.toml  README.md
functor_derive/examples/: map_generic.rs  multiple.rs  readme.rs  simple_enum.rs  simple_struct.rs  struct_with_vec.rs  try_fmap.rs
functor_derive/src/: impl_alloc.rs  impl_core.rs  impl_std.rs  lib.rs
functor_derive/tests/: attributes.rs  bounds.rs  funcmap.rs  integration.rs  recursion.rs  simple.rs  std.rs  try.rs
functor_derive/tests/funcmap/: decorations.rs  fallible.rs  hygiene.rs  impl_alloc.rs  impl_core.rs  impl_std.rs  lints.rs  mod.rs  multi_param.rs  opts_crate.rs  opts_params.rs  single_param.rs  variants.rs
functor_derive_lib/: Cargo.toml  README.md
functor_derive_lib/src/: functor_param.rs  generate_fmap_body.rs  generate_map.rs  lib.rs  map.rs  parse_attribute.rs
