[package]
name = "functor_derive"
version = "0.0.1"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>", "Julia Dijkstra"]
description = "A derive macro to derive a functor for a type."
keywords = ["proc-macro", "derive", "functor"]
edition = "2021"
license = "MIT"
repository = "https://github.com/binary-banter/functor_derive"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
proc-macro2 = "1.0.67"
syn = { version = "2.0.33", features = ["full"] }
functor_derive_lib = { path = "../functor_derive_lib" }
