[package]
name = "functor_derive"
version = "0.2.1"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>", "Julia Dijkstra"]
description = "A derive macro to derive a functor for a type."
keywords = ["proc-macro", "derive", "functor"]
edition = "2021"
license = "MIT"
repository = "https://github.com/binary-banter/functor_derive"

[dependencies]
functor_derive_lib = "0.2.1"
