[package]
name = "functor_derive_lib"
version = "0.0.1"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>", "Julia Dijkstra"]
description = "The lib for a derive macro to derive a functor for a type."
keywords = ["proc-macro", "derive", "functor"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
